Ready to test job result submit/list
